syntax = "proto2";
package dos;

// Message sent from client after opening a connection to the server to show
// what data it wants to recieve.
message HandshakeMessage {
	enum ClientType {
		// Each of the players choose this type.
		PLAYER = 0;

		// The central screen uses this type.
		DECK = 1;

		// A debugging mode which sends all updates.
		// GOD = 2;
	}

	required ClientType type = 1 [default = PLAYER];
}

